--- a/q/266083.html
+++ b/q/266083.html
@@ -26,13 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>161</td><td>Scala</td><td>231020T090429Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266127#266127">138 Aspe</a></td></tr>
-<tr d-ix="1"><td>025</td><td>JavaScript ES6</td><td>231019T234625Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266115#266115">Neil</a></td></tr>
-<tr d-ix="2"><td>051</td><td>Python 3</td><td>231019T232025Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266114#266114">Nick Ken</a></td></tr>
-<tr d-ix="3"><td>024</td><td>R</td><td>231019T175216Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266109#266109">Nick Ken</a></td></tr>
-<tr d-ix="4"><td>170</td><td>Java 8</td><td>231018T145703Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266085#266085">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>nan</td><td></td><td>240913T140512Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/275513#275513">Legendar</a></td></tr>
+<tr d-ix="1"><td>161</td><td>Scala</td><td>231020T090429Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266127#266127">138 Aspe</a></td></tr>
+<tr d-ix="2"><td>025</td><td>JavaScript ES6</td><td>231019T234625Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266115#266115">Neil</a></td></tr>
+<tr d-ix="3"><td>051</td><td>Python 3</td><td>231019T232025Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266114#266114">Nick Ken</a></td></tr>
+<tr d-ix="4"><td>024</td><td>R</td><td>231019T175216Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266109#266109">Nick Ken</a></td></tr>
+<tr d-ix="5"><td>170</td><td>Java 8</td><td>231018T145703Z</td><td><a href="https://codegolf.stackexchange.com/questions/266083/write-a-variadic-fixed-point-combinator/266085#266085">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 161 bytes</h1>
+<div id="pu0" class="pu"><h1>Binary Lambda Calculus (30 bits)</h1>
+<p>Since lambda calculus has no general definition of a &quot;list&quot; and no specific argument encoding was required, I use a variation of n-tuples that directly embeds a mapping function:</p>
+<p><code>lst A B C D ... = \ms.(s (m A) (m B) (m C) (m D) ...)</code></p>
+<p>A variadic fixed-point combinator is then equivalent to the <em>Turing combinator</em>:</p>
+<pre><code>vfix = (\m.(m m) \fx.(x (f f x)))
+     = 010001101000000110010111011010 (30 bits)
+</code></pre>
+<h2>Example</h2>
+<p>Written in pseudo lambda calculus:</p>
+<pre><code>g = \ghx.(zero? x true (h (x - 1)))
+h = \ghx.(zero? x false (g (x - 1)))
+rec = vfix \sm.(s (m g) (m h))
+
+even :: Number -&gt; Bool
+even = rec \gh.g
+
+odd :: Number -&gt; Bool
+odd = rec \gh.h
+</code></pre>
+<p>Here <code>\gh.g</code> and <code>\gh.h</code> are the tuple selectors. For n elements in the initial list, these will need n arguments respectively.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 161 bytes</h1>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/266085/110802">@Kevin Cruijssen'Java answer</a> in Scala.</p>
 <hr />
 <p>Golfed version. <a href="https://tio.run/##vZG9asMwEMd3P8UROkjQmGTo4taFEBrIUGK6hg6qLQcVVzaSnCYYrX2APmJfxD35MwmBbl2Cufv9P3TRMctYXRvFhIFllfAUDMmDhTxS92O9drNqNimhwbIfRc0oJmkp42ChFDtuV6/NPn9753EP7AjrthFuey6smP/BClKEj5J/on2@50qJhMOQExZ@TFBNqaXW1p3pMxMS@MFwmWhYFAVUHsCeZcD3XG6SZCUOAfR5ELafBBkAFxRBBWdRXX8YHoAaBy4vQUMkUngWBEQKRPpMr6U2TMZ8k27X0mBcCDMKRpUceKY5OGsypz6@xzfXFNM5BQv29l/7pcx1GwvO/i6I/ah3cWiUGpFLPXbD5MjfkfGfoCcSxyNwqe7SOzBvN9e49oyuRJorImRRGniYwgxMDne0ai7YZ71wXWamc3EW@LhGQQcMkwaqSz2HCiWkySTRk7UbBnDTZv58fcMT2uJgjLoH7IqTwXXiTKxn618" rel="nofollow noreferrer">Try it online!</a></p>
@@ -78,7 +100,7 @@ object Main extends App {
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 25 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 25 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-js lang-js prettyprint-override"><code>g=a=&gt;a.map(p=&gt;_=&gt;p(g(a)))
@@ -89,7 +111,7 @@ object Main extends App {
 </p>
 <p>Port of @KevinCruijssen's Java answer.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>55</s> 51 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, <s>55</s> 51 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>y=lambda a:[(lambda x:lambda:x(y(a)))(x)for x in a]
 </code></pre>
@@ -114,13 +136,13 @@ collatz = y(collatz_fix)[0]()
 </code></pre>
 <p>Note that the functions returned must be called without an argument to return the actual useful function.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 24 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 24 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>y=\(a)Map(\(x)x(y(a)),a)
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=hVPBbtQwED1wQPJXTAWtPGwq4vRSIeXEGS5w61aRiScbS4kd2U67Qf0TLuXAP_AtfA12dtPuFqpeYs2892beTOwfP939_a8xNOeXv6dyzSV-kgNf8y1u-RQjzCTu4D-vXtMNmcoqVTV6CyV02gfOQPsqAVHcjKbGNTd4Yu7uUvA2YpHPzbnAbGbG6Ih4Ys7OFmaqMlMZMtZbdfFPn7xK6Zh6plcx4wftxP8Ehz3zp4riJYV4VCSfb-CL7em2lQFqa4LTN6SgH8Mou24CR_XofMzNQ4BtIJUJ2hoPwYKiQK7XhqC1t9BLM4EPNPhEDC3BR9t1MnyHwdma1OgoiTYU0iFYHdHjFT16zlSZo264KUuBCqjzNLe-uipW5vS0uL5OnFWa-lCEO45I8Psixs_CF-_MSsRM2sFyL6KRiR9eEmT7ZU58-Z84245DVYqG0M7YMgjOpRkzY_-NnI-Yp_BZ9uS5-FDkGaQvxpV_JR88kKzbh33C6LXZgDaBNknbONuDSIsqctbJYehinwdzGSQ_GTz1chRjFmdHv9PuPWUN7t_D8mz-Ag" rel="nofollow noreferrer">Attempt this Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=hVPBbtQwED1wQPJXTAWtPGwq4vRSIeXEGS5w61aRiScbS4kd2U67Qf0TLuXAP_AtfA12dtPuFqpeYs2892beTOwfP939_a8xNOeXv6dyzSV-kgNf8y1u-RQjzCTu4D-vXtMNmcoqVTV6CyV02gfOQPsqAVHcjKbGNTd4Yu7uUvA2YpHPzbnAbGbG6Ih4Ys7OFmaqMlMZMtZbdfFPn7xK6Zh6plcx4wftxP8Ehz3zp4riJYV4VCSfb-CL7em2lQFqa4LTN6SgH8Mou24CR_XofMzNQ4BtIJUJ2hoPwYKiQK7XhqC1t9BLM4EPNPhEDC3BR9t1MnyHwdma1OgoiTYU0iFYHdHjFT16zlSZo264KUuBCqjzNLe-uipW5vS0uL5OnFWa-lCEO45I8Psixs_CF-_MSsRM2sFyL6KRiR9eEmT7ZU58-Z84245DVYqG0M7YMgjOpRkzY_-NnI-Yp_BZ9uS5-FDkGaQvxpV_JR88kKzbh33C6LXZgDaBNknbONuDSIsqctbJYehinwdzGSQ_GTz1chRjFmdHv9PuPWUN7t_D8mz-Ag" rel="noreferrer">Attempt this Online!</a></p>
 <p>A recursive function that takes a list of functions and returns a list of functions. The input list of functions should be a list of mutually recursive functions. Each function within this list should take a list of functions as an argument, and return a function that makes use of one or more members of the function list.</p>
-<p>Inspiration taken from the <a href="https://tio.run/#%23pVGxCoMwFNzzFTcUVFBRO3Vw9Qu6iYNgRGmMRW3p39uXp9YWFFo6vTP37i45q7y/SKXGsYSKm/xqHwg4apR3qZP6gdQAF21RZNCIBVCXBsQICA@V1Dh3N0lYql6aPdgaHkJHCPr40iLJSbx4mPXVhNUWy60MMcrJj4z5jGYmRNMWx4CzGLkwI5xGxKlr5nrpKY53KM@jNJb95MM3X42CN6PoH6NwNtrWcw3Lo2fyhaK5k7w2MUVLvV67Wg@w6f9yuxbSwPdPmfNJmYq3melpu1S4T0ULNT4B" rel="nofollow noreferrer">Haskell answer in Bubbler’s comment</a>, as well as <a href="https://codegolf.stackexchange.com/a/266085/42248">@KevinCruijssen’s Java answer</a>.</p>
-<p>Examples shown in the <a href="https://ato.pxeger.com/run?1=hVPBbtQwED1wQPJXTAWtPGwq4vRSIeXEGS5w61aRiScbS4kd2U67Qf0TLuXAP_AtfA12dtPuFqpeYs2892beTOwfP939_a8xNOeXv6dyzSV-kgNf8y1u-RQjzCTu4D-vXtMNmcoqVTV6CyV02gfOQPsqAVHcjKbGNTd4Yu7uUvA2YpHPzbnAbGbG6Ih4Ys7OFmaqMlMZMtZbdfFPn7xK6Zh6plcx4wftxP8Ehz3zp4riJYV4VCSfb-CL7em2lQFqa4LTN6SgH8Mou24CR_XofMzNQ4BtIJUJ2hoPwYKiQK7XhqC1t9BLM4EPNPhEDC3BR9t1MnyHwdma1OgoiTYU0iFYHdHjFT16zlSZo264KUuBCqjzNLe-uipW5vS0uL5OnFWa-lCEO45I8Psixs_CF-_MSsRM2sFyL6KRiR9eEmT7ZU58-Z84245DVYqG0M7YMgjOpRkzY_-NnI-Yp_BZ9uS5-FDkGaQvxpV_JR88kKzbh33C6LXZgDaBNknbONuDSIsqctbJYehinwdzGSQ_GTz1chRjFmdHv9PuPWUN7t_D8mz-Ag" rel="nofollow noreferrer">ATO link above</a> and below are even/odd, mod 3 and Collatz problem.</p>
+<p>Inspiration taken from the <a href="https://tio.run/#%23pVGxCoMwFNzzFTcUVFBRO3Vw9Qu6iYNgRGmMRW3p39uXp9YWFFo6vTP37i45q7y/SKXGsYSKm/xqHwg4apR3qZP6gdQAF21RZNCIBVCXBsQICA@V1Dh3N0lYql6aPdgaHkJHCPr40iLJSbx4mPXVhNUWy60MMcrJj4z5jGYmRNMWx4CzGLkwI5xGxKlr5nrpKY53KM@jNJb95MM3X42CN6PoH6NwNtrWcw3Lo2fyhaK5k7w2MUVLvV67Wg@w6f9yuxbSwPdPmfNJmYq3melpu1S4T0ULNT4B" rel="noreferrer">Haskell answer in Bubbler’s comment</a>, as well as <a href="https://codegolf.stackexchange.com/a/266085/42248">@KevinCruijssen’s Java answer</a>.</p>
+<p>Examples shown in the <a href="https://ato.pxeger.com/run?1=hVPBbtQwED1wQPJXTAWtPGwq4vRSIeXEGS5w61aRiScbS4kd2U67Qf0TLuXAP_AtfA12dtPuFqpeYs2892beTOwfP939_a8xNOeXv6dyzSV-kgNf8y1u-RQjzCTu4D-vXtMNmcoqVTV6CyV02gfOQPsqAVHcjKbGNTd4Yu7uUvA2YpHPzbnAbGbG6Ih4Ys7OFmaqMlMZMtZbdfFPn7xK6Zh6plcx4wftxP8Ehz3zp4riJYV4VCSfb-CL7em2lQFqa4LTN6SgH8Mou24CR_XofMzNQ4BtIJUJ2hoPwYKiQK7XhqC1t9BLM4EPNPhEDC3BR9t1MnyHwdma1OgoiTYU0iFYHdHjFT16zlSZo264KUuBCqjzNLe-uipW5vS0uL5OnFWa-lCEO45I8Psixs_CF-_MSsRM2sFyL6KRiR9eEmT7ZU58-Z84245DVYqG0M7YMgjOpRkzY_-NnI-Yp_BZ9uS5-FDkGaQvxpV_JR88kKzbh33C6LXZgDaBNknbONuDSIsqctbJYehinwdzGSQ_GTz1chRjFmdHv9PuPWUN7t_D8mz-Ag" rel="noreferrer">ATO link above</a> and below are even/odd, mod 3 and Collatz problem.</p>
 <pre><code>even_odd_fix = list(
  is_even=\(func)\(n)!n||func$is_odd(n-1),
  is_odd=\(func)\(n)!!n&amp;&amp;func$is_even(n-1)
@@ -144,7 +166,7 @@ mod3 = y(mod3_fix)
 collatz_depth = y(coll_fix)[[1]]
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Java 8, 170 bytes</h1>
+<div id="pu5" class="pu"><h1>Java 8, 170 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>interface C{Object t(Object o);}interface F{C f();}interface P{C c(F[]f);static F[]g(P[]a){return java.util.Arrays.stream(a).map(p-&gt;(F)()-&gt;p.c(g(a))).toArray(F[]::new);}}
 </code></pre>
