--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240913T140351Z
+"   /golfscore                                      20240913T140512Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/266083.html">Write a variadic fixed point combinator         : 0266083</a>
 <a href="q/103624.html">Find the sum of all numbers below n that are a m: 0103624</a>
 <a href="q/275493.html">Function with memories of its past life         : 0275493</a>
 <a href="q/217366.html">Draw an ASCII hexagon of side length n          : 0217366</a>
