--- a/q/275493.html
+++ b/q/275493.html
@@ -26,24 +26,45 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>C gcc</td><td>240913T135527Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275511#275511">jdt</a></td></tr>
-<tr d-ix="1"><td>009</td><td>K ngn/k</td><td>240913T130009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275510#275510">ovs</a></td></tr>
-<tr d-ix="2"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
-<tr d-ix="3"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
-<tr d-ix="4"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>027</td><td>C gcc</td><td>240913T135527Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275511#275511">jdt</a></td></tr>
+<tr d-ix="2"><td>009</td><td>K ngn/k</td><td>240913T130009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275510#275510">ovs</a></td></tr>
+<tr d-ix="3"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
+<tr d-ix="4"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
 <tr d-ix="5"><td>023</td><td>Ruby</td><td>240913T071350Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275499#275499">G B</a></td></tr>
 <tr d-ix="6"><td>024</td><td>R</td><td>240913T071317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275498#275498">pajonk</a></td></tr>
 <tr d-ix="7"><td>038</td><td>Python 3</td><td>240913T070917Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275497#275497">The Empt</a></td></tr>
 <tr d-ix="8"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
 <tr d-ix="9"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 27 bytes</h1>
+<div id="pu0" class="pu"><h1>Java, 85 bytes</h1>
+
+<pre class="lang-java prettyprint-override"><code>interface N{N f(String s);static N i=s-&gt;t-&gt;{System.out.println(s);return N.i.f(t);};}
+</code></pre>
+<p><a href="https://tio.run/##ldC9boMwEADgPU9xYsIDSMBWlCxdupQlQ4eqwxVs6sQxkX0gVYhnpzaQ/qBKtF58ujt/Z/uEHUan6jyWCq2FR5S6H6UmbgSWHIq@ABEeyUhdg2W5JSRZQgFyb6MDRYf@@G6JX@Kmpfjqukjp0PUZTq3RUMQyFiGxfMiHEeDavip3ekG6RlZwcQMX//kFWb8Dt34xg3tUyl9C3kHA8qmtQwMigf0yJrDJrbKpiGTFpI4RyaSkvrAtpCsh80I6CdkfBUBd@Rdg7X7hi5sVWevG8OozmayS2372jcz@e5rMjzstX/zAlWoC5sOnxqhqDulN2jm67bgUuKVZGHbD@AE" rel="nofollow noreferrer">Try it online.</a></p>
+<p><strong>Explanation:</strong></p>
+<pre class="lang-java prettyprint-override"><code>interface N{     // Interface to use as our lambda
+  N f(String s); //  taking a String parameter, and returning another instance of itself
+
+  static         // Static context so we're able to reference the interface
+         N i=    // Create this interface as re-usable lambda method:
+    s-&gt;          //  Taking a String parameter and returning another lambda method:
+       t-&gt;{      //   Also taking a String parameter and returning a lambda method:
+         System.out.println(s);
+                 //    Print the String of the outer lambda with trailing newline
+         return  //    And then return
+           N.i.f(t);};}
+                 //     A call to the outer lambda with the inner String parameter,
+                 //     using a static call to prevent 'self-reference in initializer' errors
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 27 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>t;f(s){t&amp;&amp;puts(t);t=s;s=f;}
 </code></pre>
 <p><a href="https://tio.run/##ZcvBCsIwDMbxs32K0MNIhTGcx9B38BVGXcZAR1kiImOvbmzBk@b4z@9L7ZSSmRKjhE2bJj9UUANpFJLItJu@8ngdGfDIWdeAgZybF4X7MC8YwG3uUB@gEIHRy8kXAd@rUUvsS4Sug8tapgJV/Znzr@m92@2d@DZMYu3zAw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 9 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 9 bytes</h1>
 <p>partial application ftw</p>
 <pre><code>{ \x;o@y}
 </code></pre>
@@ -56,7 +77,7 @@
 &quot;s2&quot;
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
 <pre><code>(ss~#0~Print@#)&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X6P4/aSFxXXKBnUBRZl5JQ7Kmmr/023THJSKDZW40m3TgQwjGMNY6T8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -71,7 +92,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X9nAQUvDxcFBQ1lfL94@oCgzr8QhXtdORVNT7X@6bZqDUrGhEle6bTqQYQRjGCv9BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
 <pre><code>f:$-&gt;x-&gt;$.import:-&gt;x=&gt;[f&amp;print,x]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?95MPqx" rel="nofollow noreferrer">Try it!</a></p>
@@ -82,26 +103,6 @@
         f y
     ]
 ]
-</code></pre>
-</div>
-<div id="pu4" class="pu"><h1>Java, 85 bytes</h1>
-
-<pre class="lang-java prettyprint-override"><code>interface N{N f(String s);static N i=s-&gt;t-&gt;{System.out.println(s);return N.i.f(t);};}
-</code></pre>
-<p><a href="https://tio.run/##ldC9boMwEADgPU9xYsIDSMBWlCxdupQlQ4eqwxVs6sQxkX0gVYhnpzaQ/qBKtF58ujt/Z/uEHUan6jyWCq2FR5S6H6UmbgSWHIq@ABEeyUhdg2W5JSRZQgFyb6MDRYf@@G6JX@Kmpfjqukjp0PUZTq3RUMQyFiGxfMiHEeDavip3ekG6RlZwcQMX//kFWb8Dt34xg3tUyl9C3kHA8qmtQwMigf0yJrDJrbKpiGTFpI4RyaSkvrAtpCsh80I6CdkfBUBd@Rdg7X7hi5sVWevG8OozmayS2372jcz@e5rMjzstX/zAlWoC5sOnxqhqDulN2jm67bgUuKVZGHbD@AE" rel="nofollow noreferrer">Try it online.</a></p>
-<p><strong>Explanation:</strong></p>
-<pre class="lang-java prettyprint-override"><code>interface N{         // Interface to use as our lambda
-  N f(String s);}    //  taking a String parameter, and returning another instance of itself
-
-  static             // Static context so we're able to reference the interface
-         N i=        // Create this interface as re-usable lambda method:
-    s-&gt;              //  Taking a String parameter and returning another lambda method:
-       t-&gt;{          //   Also taking a String parameter and returning a lambda method:
-         System.out.println(s);
-                     //    Print the String of the outer lambda with trailing newline
-         return      //    And then return
-           N.i.f(t);}//     A call to the outer lambda with the inner String parameter,
-                     //     using a static call to prevent 'self-reference in initializer' errors
 </code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 23 bytes</h1>
