--- a/q/103624.html
+++ b/q/103624.html
@@ -91,7 +91,7 @@
 <p>I must admit that the handling of two lists (a number range and the list of divisors) was quite difficult and, subsequently, this code might look quite long.</p>
 <p>This program takes a number and a list of divisors as an input and outputs the sum of all multiples the input list.</p>
 <h3>Explanation:</h3>
-<pre class="lang-python prettyprint-override"><code>            ŀ²  # Make a range 0 to input number
+<pre class="lang-python prettyprint-override"><code>            ŀ²  # Make a range 0 to input number minus 1
            t    # Drop 0
         Ṫ¦⁰     # Make a table of divisors:
                 # if the value is divisible, put quotient, otherwise put 0
