--- a/q/275493.html
+++ b/q/275493.html
@@ -26,18 +26,25 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>027</td><td>C gcc</td><td>240913T135527Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275511#275511">jdt</a></td></tr>
-<tr d-ix="2"><td>009</td><td>K ngn/k</td><td>240913T130009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275510#275510">ovs</a></td></tr>
-<tr d-ix="3"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
-<tr d-ix="4"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
-<tr d-ix="5"><td>023</td><td>Ruby</td><td>240913T071350Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275499#275499">G B</a></td></tr>
-<tr d-ix="6"><td>024</td><td>R</td><td>240913T071317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275498#275498">pajonk</a></td></tr>
-<tr d-ix="7"><td>038</td><td>Python 3</td><td>240913T070917Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275497#275497">The Empt</a></td></tr>
-<tr d-ix="8"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
-<tr d-ix="9"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
+<tr d-ix="0"><td>057</td><td>Haskell</td><td>240913T184613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275518#275518">Antonio </a></td></tr>
+<tr d-ix="1"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>027</td><td>C gcc</td><td>240913T135527Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275511#275511">jdt</a></td></tr>
+<tr d-ix="3"><td>009</td><td>K ngn/k</td><td>240913T130009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275510#275510">ovs</a></td></tr>
+<tr d-ix="4"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
+<tr d-ix="5"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
+<tr d-ix="6"><td>023</td><td>Ruby</td><td>240913T071350Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275499#275499">G B</a></td></tr>
+<tr d-ix="7"><td>024</td><td>R</td><td>240913T071317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275498#275498">pajonk</a></td></tr>
+<tr d-ix="8"><td>038</td><td>Python 3</td><td>240913T070917Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275497#275497">The Empt</a></td></tr>
+<tr d-ix="9"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
+<tr d-ix="10"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Java, 85 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 57 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>data U=U{u::[Char]-&gt;IO U};f=U$pure.U.(.u f).(*&gt;).putStrLn
+</code></pre>
+<p><a href="https://tio.run/##y0gszk7Nyfn/PyWxJFEh1Da0utTKKto5I7EoVtfO018htNY6zTZUpaC0KFUvVE9Dr1QhTVNPQ8tOU6@gtCS4pMgn739uYmaegq1CSj6XAhCkK9joKgBVKSgVGyohi6QDRYwgIhCOsdJ/AA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Java, 85 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>interface N{N f(String s);static N i=s-&gt;t-&gt;{System.out.println(s);return N.i.f(t);};}
 </code></pre>
@@ -58,13 +65,13 @@
                  //     using a static call to prevent 'self-reference in initializer' errors
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 27 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 27 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>t;f(s){t&amp;&amp;puts(t);t=s;s=f;}
 </code></pre>
 <p><a href="https://tio.run/##ZcvBCsIwDMbxs32K0MNIhTGcx9B38BVGXcZAR1kiImOvbmzBk@b4z@9L7ZSSmRKjhE2bJj9UUANpFJLItJu@8ngdGfDIWdeAgZybF4X7MC8YwG3uUB@gEIHRy8kXAd@rUUvsS4Sug8tapgJV/Znzr@m92@2d@DZMYu3zAw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 9 bytes</h1>
 <p>partial application ftw</p>
 <pre><code>{ \x;o@y}
 </code></pre>
@@ -77,7 +84,7 @@
 &quot;s2&quot;
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
 <pre><code>(ss~#0~Print@#)&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X6P4/aSFxXXKBnUBRZl5JQ7Kmmr/023THJSKDZW40m3TgQwjGMNY6T8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -92,7 +99,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X9nAQUvDxcFBQ1lfL94@oCgzr8QhXtdORVNT7X@6bZqDUrGhEle6bTqQYQRjGCv9BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
 <pre><code>f:$-&gt;x-&gt;$.import:-&gt;x=&gt;[f&amp;print,x]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?95MPqx" rel="nofollow noreferrer">Try it!</a></p>
@@ -105,30 +112,30 @@
 ]
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 23 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 23 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>f=-&gt;s{-&gt;z{puts s;f[z]}}
 </code></pre>
 <p><a href="https://tio.run/##LYxBDoQgEATv@4oOd1@wwY8QD5AFwUTGMEM2anw7YnaPXV2pUt3eWtDDyOcwHudWhcHvYI7putqsg1GZIGn1EELxLGp6RT0btVQWfAg71QL3OxYdjfpGKw9F9LYgMTIJLOSvGGU7iL6AsodLnaPPnreP0G4" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 24 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="noreferrer">R</a>, 24 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(s)\(t){show(s);f(t)}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWO9JsYzSKNWM0SjSrizPyy4Fs6zQgpxYifVM3zdA2TUMpUUmTK82QK83INs1QQykJxDO2TTPSUEoGMU1s04w1lFKUNCGaYGYDAA" rel="noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 38 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 38 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x:lambda y:[f(y),print(x)][0]
 </code></pre>
 <p><a href="https://tio.run/##TY1RCoMwDIavEvrUgozB3oRdYRcQH1Jta6FrxEamp@9qFTYCId@X8GfeeaL4yNk@A771iLC117C3nZW7aubFR5ab6rt7n0@wUmiMpYSSgsihRnQVvHMrjEc/KFTkYUre0SGi15pgLrqifBGbFnjyCRKXaAdlisRQ/5gRMJ3bxfC6xAQIdo0De4rFI8PHh3AeFzZXSPOL@LPgOZlgb0oolb8" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>Well sadly, the anonymous function can’t be shorter while being completely anonymous… 😮‍💨</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 21 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 21 bytes</h1>
 <pre><code>f(x)=t-&gt;print(x);f(t)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGCpaUlaboWW9M0KjRtS3TtCooy80qAbOs0jRJNiNz-RAVbhTQNQ02uJCAjUcNIkysZyEjSMAYyNEygqmAmAQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://v8.dev/" rel="noreferrer">JavaScript (V8)</a>, 21 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://v8.dev/" rel="noreferrer">JavaScript (V8)</a>, 21 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=s=&gt;x=&gt;f(x,print(s))
 </code></pre>
