--- a/q/275514.html
+++ b/q/275514.html
@@ -26,12 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
-<tr d-ix="1"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
-<tr d-ix="2"><td>089</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
+<tr d-ix="0"><td>081</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
+<tr d-ix="1"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
+<tr d-ix="2"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
 <tr d-ix="3"><td>035</td><td>Perl 5 + pF M5.10.0</td><td>240913T150923Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275515#275515">Dom Hast</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Zilog_Z80" rel="nofollow noreferrer">Z80 Machine Code</a>, 39 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 81 bytes</h1>
+<p><em>-6 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a>, and -2 from there</em></p>
+<p>Expects an array of characters and returns a matrix of characters, with leading and/or trailing blank lines.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>a=&gt;[...a+a].map((_,y)=&gt;a.map(c=&gt;&quot;_\\/ &quot;[+[...a,i=2][c&gt;&quot;s&quot;?y++:y-=i=c&lt;&quot;s&quot;]?+i:3]))
+</code></pre>
+<p><a href="https://tio.run/##NY5Bj8IgFITv/RXknUAqTfSmC578FS1rXqB1MRUakE3667ulq@8dZr7MHOaBv5hMdNNr74Ptl0EuKFUrhECOWjxxovRWz0wq3MBIBbeuawi0fGvVTh50axQkuMycn@a9dNJ8ragv3J2OmrHl3FaEQM5QF7X2X3NONmebrP0kecVCH7Tl03pQ6UoMIV7R/NBEpCIm@BTGXozhTgdaliTNtoWxxFE8gvMUgLG36zwwEftpRNPT5pvsOt/cnzUpFXZe/gA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>(the test code includes some post-processing for readability)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Zilog_Z80" rel="nofollow noreferrer">Z80 Machine Code</a>, 39 bytes</h1>
 <pre><code>1AB7C81323FE552005362F250600FE44200524365C065FFE5320E5A0200624367E2518DC7018D9
 </code></pre>
 <p>Without the requirement for the <code>s</code> character being different based on whether it follows a <code>u</code> or <code>d</code>, the code can be gotten down to 27 bytes.</p>
@@ -80,7 +89,7 @@ drawLower:
 <p>There's no portable way to print stuff in Z80, but here's an example of the code in action:</p>
 <p><a href="https://i.sstatic.net/LR89POed.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/LR89POed.png" alt="screenshot of printed landscape" /></a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
 <pre><code>≔_θＦＳ≡ιsθd«Ｍ⁼θ_↓\≔_θ»«Ｍ⌕θ_↓/≔‾θ
 </code></pre>
 <p><a href="https://tio.run/##dY1LCsIwEIbXzSmGrBKouK8rQQUXguC2ICHpI1AS20naRSl4Mg/jRWJKQVFwM/C/vpG16KQVTQhbRF0ZRq80hZZvSGk7YEdz8@7iOm0qxjngoJ2sgWkOI5ECC6BIMzjH3LF5tHgqeiNJTrYv2L71okHWphDJPIVsZwcTm8kyonlOZ/X7fSKqKIVv3Id00Eb956y/MM/74w2aQvAelfcKVbxh1Tcv" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -103,14 +112,6 @@ drawLower:
 <pre><code>ＦＳ≡ιd¦¶\¦s¦_↗/
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z8tv0hBwzOvoLQkuKQoMy9dQ1NTobg8syQ5Q0EjU1Ohmis5sThVQSlFyUohAChfoqEUkxcTo6RpDZUoRkjEg0RTUtMSS3NKYIJWoQVBmekZJToKSvog6dr//0tLi1NKS1OKU4Dkf92yHAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Depending on each input letter, the program either d) moves down a line, then prints a <code>\</code> s) prints a <code>_</code> or u) prints a <code>/</code>, then moves up a line. Annoyingly I can't seem to do anything about the multiple separators required between the strings which take up over 20% of my bytes.</p>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 89 bytes</h1>
-<p>Expects an array of characters and returns a matrix of characters, with leading and/or trailing blank lines.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>a=&gt;[...a+0].map((_,y)=&gt;a.map(c=&gt;&quot; \\_/&quot;[y-(Y-=i=&quot;su&quot;.search(c))+(i&lt;1)?0:i+2],Y=a.length))
-</code></pre>
-<p><a href="https://tio.run/##NY7RboMwDEXf@YrIT/EA0@1xbdjTPqICVkVJoKlogpKmUr@ekm6zJcvn@sq6F3mXUQW73GrntVlHsUrRdkQky91AV7lwfqoeKFr5AiVaYH1/aqB71PxYCysgJqBoZFBnrhBLbg/v@LX7tOXHUB2FpNm46XZGXPddwRikFHVKOuptQvWrJJ3pH3XuuBUUQ0GjD99y@x2ZaJnyLvrZ0OwnPvKcMw74ShbyOdDFW8cBEP@23gFSMMssleHND3vrXTNdK5YtuF@f" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>(the test code includes some post-processing for readability)</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pF -M5.10.0</code>, 35 bytes</h1>
 
