--- a/q/275527.html
+++ b/q/275527.html
@@ -26,10 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>061</td><td>Python 3</td><td>240914T073427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275528#275528">Redz</a></td></tr>
-<tr d-ix="1"><td>003</td><td>Vyxal 3</td><td>240914T074552Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275529#275529">lyxal</a></td></tr>
+<tr d-ix="0"><td>105</td><td>C clang</td><td>240914T090748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275530#275530">Neil</a></td></tr>
+<tr d-ix="1"><td>061</td><td>Python 3</td><td>240914T073427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275528#275528">Redz</a></td></tr>
+<tr d-ix="2"><td>003</td><td>Vyxal 3</td><td>240914T074552Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275529#275529">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python 3, 61 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 105 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>#define s(x,y)if(x&gt;y)f=x,x=y,y=f;
+f;int m(a,b,c,d,e){s(a,b)s(d,e)s(a,d)s(b,e)s(b,c)s(c,d)s(b,c)return c;}
+</code></pre>
+<p><a href="https://tio.run/##VZFhb4IwEIY/y6@4aJZQvS0iOFkQ/wjjA7RFmzhcABeI4bez66EGE9rePe/1Te@Q7/KclcdhYUp5vioN@7pR5vJxOjimbIaF0oUpNdRui50whdseOlHELbZxh11cRE4RUR38uBnmKFGhFrfaJqJ2bWJjRXvOMZXQLu9Eiko316oEGfWDdWl03dRJmmxTiOHmzG4Bwpa/TwS/RyJfFCDQHiJsmISsbhh6THYUIOwYbpmMJve7TDxWx8qQCaUBE3LbMfFZ9Uf/h0/Aafh4j/d4DwVB7/SRw@PITOnaIKuOEkGesmq5tMmfsH0VlwpYNtTnOqJjD549VyvWZ3yVtHEgJk3WaXTH@RR7TyynePPEaor9J9ZTHDD@rUgo3HnyphBeV0rru5wjZAg5dYNAWCP/9AkQgnxoBMM/" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a> Link includes test suite. Explanation: In theory compilers should be able to optimise all of the swaps to a series of <code>cmov</code> instructions but in practice they only bother optimising four of the swaps (because they get to optimise away some of the instructions). This is not a full sorting network (it would need to end with <code>s(a,b)s(d,e)</code>) but <code>c</code> is always the median by this point.</p>
+</div>
+<div id="pu1" class="pu"><h1>Python 3, 61 bytes</h1>
 <pre><code>x=[]
 for i in[0]*5:x.append(int(input()))
 print(sorted(x)[2])
@@ -38,7 +46,7 @@ print(sorted(x)[2])
 <p>Expects input as one integer per line. No input rules were specified, so I'm pretty sure this is ok.</p>
 <p>Python is also interpreted, not compiled, so there is nothing being translated into the CPU level.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a>, 3 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a>, 3 bytes</h1>
 <pre><code>S2i
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#JTdCJTIyZm9ybWF0JTIyJTNBMiUyQyUyMmhlYWRlciUyMiUzQSUyMiUyMiUyQyUyMmNvZGUlMjIlM0ElMjJTMmklMjIlMkMlMjJmb290ZXIlMjIlM0ElMjIlMjIlMkMlMjJmbGFncyUyMiUzQSU1QiU1RCUyQyUyMmlucHV0cyUyMiUzQSU1QiUyMiU1QjklMkMlMjAzJTJDJTIwOSUyQyUyMDglMkMlMjAyJTVEJTIyJTVEJTJDJTIydmVyc2lvbiUyMiUzQSUyMjMuNC44JTIyJTdE" rel="nofollow noreferrer">Vyxal It Online!</a></p>
