--- a/q/275527.html
+++ b/q/275527.html
@@ -26,16 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>105</td><td>C clang</td><td>240914T090748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275530#275530">Neil</a></td></tr>
+<tr d-ix="0"><td>102</td><td>C clang</td><td>240914T090748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275530#275530">Neil</a></td></tr>
 <tr d-ix="1"><td>061</td><td>Python 3</td><td>240914T073427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275528#275528">Redz</a></td></tr>
 <tr d-ix="2"><td>003</td><td>Vyxal 3</td><td>240914T074552Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275529#275529">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 105 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>105</s> 102 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>#define s(x,y)if(x&gt;y)f=x,x=y,y=f;
-f;int m(a,b,c,d,e){s(a,b)s(d,e)s(a,d)s(b,e)s(b,c)s(c,d)s(b,c)return c;}
+<pre class="lang-c prettyprint-override"><code>#define s(x,y)x&gt;y?f=x,x=y,y=f:y;
+f;int m(a,b,c,d,e){s(a,b)s(d,e)s(a,d)s(b,e)s(b,c)s(c,d)return s(b,c)}
 </code></pre>
-<p><a href="https://tio.run/##VZFhb4IwEIY/y6@4aJZQvS0iOFkQ/wjjA7RFmzhcABeI4bez66EGE9rePe/1Te@Q7/KclcdhYUp5vioN@7pR5vJxOjimbIaF0oUpNdRui50whdseOlHELbZxh11cRE4RUR38uBnmKFGhFrfaJqJ2bWJjRXvOMZXQLu9Eiko316oEGfWDdWl03dRJmmxTiOHmzG4Bwpa/TwS/RyJfFCDQHiJsmISsbhh6THYUIOwYbpmMJve7TDxWx8qQCaUBE3LbMfFZ9Uf/h0/Aafh4j/d4DwVB7/SRw@PITOnaIKuOEkGesmq5tMmfsH0VlwpYNtTnOqJjD549VyvWZ3yVtHEgJk3WaXTH@RR7TyynePPEaor9J9ZTHDD@rUgo3HnyphBeV0rru5wjZAg5dYNAWCP/9AkQgnxoBMM/" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a> Link includes test suite. Explanation: In theory compilers should be able to optimise all of the swaps to a series of <code>cmov</code> instructions but in practice they only bother optimising four of the swaps (because they get to optimise away some of the instructions). This is not a full sorting network (it would need to end with <code>s(a,b)s(d,e)</code>) but <code>c</code> is always the median by this point.</p>
+<p><a href="https://tio.run/##VZFhb4IwEIY/y6@4aJaA3hYRnGyI@yGMD9AWbeLqArhADL@dXY9pWELbu@e9vukd4lmcc3McFtqI81Uq2NeN1JeX08HRphkWUpXaKKjdFjuvPXQfZdJim3TYJeV7FztlTGXw5eZYoECJyrvVNvFq1yY2lrQXHFMJ7VTmVaq5VgZG1A/Wo1F1U6dZus0ggZszu4UIW/5eEYIeibxRgEB7hLBhErG6Yegz2VGAsGO4ZTKa/N1l4rM6VkZMKA2ZkNuOScBqMPrffUJOo/t7/Pt7KAh7p48dHkaujWuDvDoKBHHKq@XSJj@e7au8VMCypj7XMR178O25WrE@46ukjQPRWbrO4j9cTLH/wGKKNw8spzh4YDXFIePvioTSnadPEuH/ymh9mjlCjlBQNwiEFfIvnwDPIx8awfAL" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a> Link includes test suite. Explanation: If <code>f</code> is turned into a local variable then <code>clang</code> is able to optimise all of the swaps to a series of compares and <code>cmov</code> instructions. This is not a full sorting network (it would need to end with <code>s(a,b)s(d,e)</code>) but <code>c</code> is always the median by this point. Edit: Saved 3 bytes thanks to @l4m2.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python 3, 61 bytes</h1>
 <pre><code>x=[]
