--- a/q/105998.html
+++ b/q/105998.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>182</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="0"><td>176</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
 <tr d-ix="1"><td>060</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
 <tr d-ix="2"><td>192</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
 <tr d-ix="3"><td>159</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
@@ -64,12 +64,13 @@
 <tr d-ix="35"><td>172</td><td>Befunge</td><td>170107T205422Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106028#106028">James Ho</a></td></tr>
 <tr d-ix="36"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> 182 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> <sub><s>182</s></sub> 176 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12
-for n ({32..63})for i (0 32 64){k=$[n+i] c=${(#)k}
-case $k {32)c=Space;;127)c=DEL;};z='| ';((i&gt;32))&amp;&amp;z=\\n;printf &quot;%-5s%-6s$z&quot; $k $c}
+for n ({32..63})for i (0 32 64){k=$[n+i] c[k]=${(#)k}
+c[32]=Space c[127]=DEL z='| ';((i&gt;32))&amp;&amp;z=\\n;printf %-5s%-6s$z $k $c[k]}
 </code></pre>
-<p><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">Try it online!</a>
+<p><a href="https://tio.run/##FYy9DoIwAAZ3nuILFmijJdIqmkBdxM3NEToogYAkQICJn2dHyU2XS27si3UdlBllKXAvOgAzzCAMQzJsxN7hqoNvM4D3nIN/ODxh5E2HGnSSwnV9ubDNS9AjpIB/YlOlSFzvS400rrQiE92xajHSWAqtXu07zf7BExetoscTo3JmOAGl5U0Kxmx7VElSB21X1kMOi597i/s9GUEqkG24rOsP" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">182b</a></s></sub>
 <sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
 <sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
 </div>
